Prevent arrows from overlapping content on unauth home page.

--- a/src/sass/myservice-pages-home.scss
+++ b/src/sass/myservice-pages-home.scss
@@ -130,9 +130,10 @@
 			width:90px;		
 		}
 		.arrow-img {
-			width:auto;
+			width: 100%;
+			max-width: 100px;
 			vertical-align: top;
-			padding-top:50px;
+			padding-top: 50px;
 		}
 		h2 {
 			font-size: 1.2em !important;
